--- a/JEAspNetCore/JEAspNetCore.csproj
+++ b/JEAspNetCore/JEAspNetCore.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="CliWrap" Version="3.4.4" />
+    <PackageReference Include="FirebaseDatabase.net" Version="4.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
